tests/baselines/reference/parserES5ComputedPropertyName6.errors.txt
parserES5ComputedPropertyName6.ts(2,3): error TS1164: Computed property names are not allowed in enums.


==== parserES5ComputedPropertyName6.ts (1 errors) ====
    enum E {
      [e] = 1
      ~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }